Updated include statement in library.properties

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,9 @@
 name=PervasiveDisplays_Library
-version=1.0.8
+version=1.0.9
 author=Rei VILO
 maintainer=Rei VILO
 sentence=Library for the Pervasive Displays EPD Extension Kit Gen 2 (EXT2) BoosterPack
-paragraph=This library provides the primitives for graphic and text, including the fonts.
+paragraph=This library provides the primitives for graphic and text, including the fonts. It requires Pervasive_EPD_BoosterPack2.  
 category=Display
 url=http://embeddedcomputing.weebly.com/lcd_screen-library-suite.html
 architectures=msp432,cc3200,tm4c
-includes=Pervasive_EPD_BoosterPack2.h
