--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=PervasiveDisplays_Library
-version=1.2.1
+version=1.2.2
 author=Rei VILO
 maintainer=Rei VILO
 sentence=Library for the Pervasive Displays EPD Extension Kit Gen 2 (EXT2) BoosterPack
-paragraph=This library provides the primitives for graphic and text, including the fonts. It requires Pervasive_EPD_BoosterPack2.  
+paragraph=This library provides the primitives for graphic and text, including the fonts. It requires Pervasive_EPD_BoosterPack2. It supports the eTC 144 190 200 260 271, iTC 215 287 420 and iTC Red 287 420. 
 category=Display
 url=http://embeddedcomputing.weebly.com/lcd_screen-library-suite.html
 architectures=msp432,cc3200,tm4c
