--- a/library.properties
+++ b/library.properties
@@ -6,4 +6,5 @@ sentence=Library for the Pervasive Displays EPD Extension Kit Gen 2 (EXT2) Boost
 paragraph=This library provides the primitives for graphic and text, including the fonts. It requires Pervasive_EPD_BoosterPack2. It supports the eTC 144 190 200 260 271, iTC 215 287 420 and iTC Red 287 420. 
 category=Display
 url=http://embeddedcomputing.weebly.com/lcd_screen-library-suite.html
-architectures=msp432,cc3200,tm4c
+dependencies=Pervasive_EPD_BoosterPack2
+architectures=msp432,cc3200,tm4c,cc13x2,cc13xx,msp432e,msp432p,msp432r
